# smart_watch_demo

./: CMakeLists.txt  partitions-16m.csv
components/aht20/: CMakeLists.txt
components/aht20/include/: aht20.h
components/aht20/src/: aht20.c
components/ble/: CMakeLists.txt
components/ble/include/: ble_time_sync.h
components/ble/src/: ble_time_sync.c
components/bmp280/: CMakeLists.txt
components/bmp280/include/: bmp280.h
components/bmp280/src/: bmp280.c
components/iic_bus/: CMakeLists.txt
components/iic_bus/include/: iic_bus.h
components/iic_bus/src/: iic_bus.c
components/jfh142/: CMakeLists.txt
components/jfh142/include/: jfh142.h
components/jfh142/src/: jfh142.c
components/lcd/: CMakeLists.txt
components/lcd/include/: cst816t.h  lcd.h  lcd_api.h  lcd_common.h  st7789v.h
components/lcd/src/: cst816t.c  lcd.c  lvgl_init.c  st7789v.c  ui.c
components/mpu6050/: CMakeLists.txt
components/mpu6050/include/: inv_mpu.h  mpu6050.h  mpu6050_api.h
components/mpu6050/src/: inv_mpu.c  inv_mpu_dmp_motion_driver.c  mpu6050.c
components/mrtc/: CMakeLists.txt
components/mrtc/include/: mrtc.h
components/mrtc/src/: mrtc.c
components/qmc5883l/: CMakeLists.txt
components/qmc5883l/include/: qmc5883l.h
components/qmc5883l/src/: qmc5883l.c
main/: CMakeLists.txt  main.c  main.h
main/app/: app.c  app.h
main/app/custom/: custom.c  custom.h
main/app/fonts/: lv_font_sun_14.c  lv_font_sun_16.c  lv_font_sun_22.c  lv_font_sun_32.c
main/app/images/: _3304542_20230221171348882211_0_100x2.c  _3304542_20230221171348882211_0_58x2.c  _bt_20x20.c  _hum_20x20.c  _hum_23x23.c  _o2_21x20.c  _pointer2_15x15.c  _power2_20x20.c  _step_23x20.c  _temp_23x23.c  _temp_25x25.c  _tired_25x25.c  _wei_22x22.c
main/custom/: custom.c
main/fonts/: lv_font_sun_16.c
main/images/: _111_240x135.c  _222_240x135.c  _3304542_20230221171348882211_0_alpha_236x1.c  _3304542_20230221171348882211_0_alpha_238x1.c  _333_240x135.c  _5555_240x135.c  _FF0000_240x135.c  _date_15x15.c  _heart1_25x25.c  _heart_25x25.c  _heat_25x25.c  _hum_15x14.c  _icon_wx_25x25.c  _step_20x20.c  _temp_15x15.c  _week_25x25.c
